--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
-<p>hello my name is Devante</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Nick Gutierrez - Portfolio</title>
+  <link type="text/css" rel="stylesheet" href="stylesheets/normalize.css"> 
+    <!--The link above called "normalize" goes to a CSS page that reset all of the browser defaults. Needs to be on Every Page-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--This is the link to the Bootstrap file, via CDN. This means you don't have to download it, it accesses a CSS page from the internet-->
+  <link type="text/css" rel="stylesheet" href="stylesheets/landing.css">
+    <!--This files goes to the CSS page I provided for the landing page. You can Open it as an example, but DO NOT EDIT IT! Any changes should go on a different CSS document-->
+  <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
+    <!--This file will be the one that you customize yourself, with your own code.-->
+  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+      <!--This link is for the google fonts API, which lets you customize .-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
+</head>
+<body>
+  <div class="jumbotron">
+      <div class="portrait_name">
+        <img class="portrait" width="140" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/SI_20151201_173715_zpsmv5ku2p8.jpg">
+        <h2>Devante Jordan</h2>
+        <h5>JordanVI</h5>
+        <p>Chicago Tech Acdemy</p>
+         <p>Art</p>
+      </div>
+  </div>
+
+<content>
+    <article>
+        <h2>Artist Statement</h2>
+        <p>Devante Jordan, Paris Johnson, Daniel Hernandez, Charles Butts, and Atori Baker<br>
+        <br>
+Tranquil Wings<br>
+Cardboard, paint, and blinds<br>
+2015<br>
+
+	 In our art installation, Tranquil Wings, we wanted to create a 3 dimensional work that depicts peace and divinity. We cut out cardboard into shapes of wings, then used blinds and cut them out as feathers. We wanted to create an art installation that will make the school look better and give students and visitors a feeling of tranquility. When walking through the hallways and they see our installation, the dark/cool colors will help create a tranquil mood. The actual wings symbolize freedom and clarity of mind.</p>
+    </article>
+
+<div class="thumbnail_space">
+<div class="row">
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><a href=""><img  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/IMG_20151201_143825_zpsnn9bbpm1.jpg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Art Wing Project</h3>
+
+                <p>This is a photo of my wing project. Hanging up wing was pretty complicated because we had to hook it onto the ceiling. Then, we had to make sure they were even on both sides so that they won't lean and fall. The overall easiest portion of this project was painting the wall, feathers, and cardboard </p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3></h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Thumbnail label</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Current Project</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Sasuke Uchiha drawing</h3>
+                 <h4>Created by me</h4>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+            <div class="caption">
+                 <h3>Thumbnail label</h3>
+
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
+                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
+                    vehicula ut id elit.</p>
+
+                          </div>
+        </div>
+    </div>
+</div>
+
+</div> <!--End of Row-->
+</div><!--End of thumbnail_space-->
+</content>
+
+<footer>
+    Footer
+</footer>
+<!--This stuff is the javascript information. The top is for jQuery, the second is Bootstrap, and the 3rd is one one you will edit-->
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
+</body>
