Added pictures and changed picutres. Edited background color. Added a navbar. Changed the font. Changed the size of pictures, headers, and layouts.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
 </head>
 <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class= "navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" width="50px" height="30px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/tumblr_mkd9zpSDvJ1qh838mo1_500_zps20a7cdec.gif">
+      </a>
+    </div>
+  </div>
+</nav>
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="#">Home</a></li>
+  <li role="presentation"><a href="#">Profile</a></li>
+  <li role="presentation"><a href="#">Messages</a></li>
+</ul>
   <div class="jumbotron">
       <div class="portrait_name">
         <img class="portrait" width="140" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/SI_20151201_173715_zpsmv5ku2p8.jpg">
@@ -93,14 +107,12 @@ Cardboard, paint, and blinds<br>
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/c1d39297-ba4a-4a50-89b5-bcba582f8ea5_zpsrhjyirsa.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>Sasuke Uchiha drawing</h3>
                  <h4>Created by me</h4>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>This is one of my drawings I had drew back in the summer. This sasuke look is from the recent movie, <i>Naruto: The Last</i> </p>
 
                           </div>
         </div>
@@ -125,7 +137,8 @@ Cardboard, paint, and blinds<br>
 </content>
 
 <footer>
-    Footer
+    Devante Jordan 2015©
+    
 </footer>
 <!--This stuff is the javascript information. The top is for jQuery, the second is Bootstrap, and the 3rd is one one you will edit-->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
