fix links to other pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Nick Gutierrez - Portfolio</title>
+  <title>Devante Jordan - Portfolio</title>
   <link type="text/css" rel="stylesheet" href="stylesheets/normalize.css"> 
     <!--The link above called "normalize" goes to a CSS page that reset all of the browser defaults. Needs to be on Every Page-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -16,27 +16,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
 </head>
-<body>
-  <nav class="navbar navbar-default">
+<body> 
+
   <div class="container-fluid">
     <div class= "navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="Brand" width="50px" height="30px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/tumblr_mkd9zpSDvJ1qh838mo1_500_zps20a7cdec.gif">
-      </a>
     </div>
   </div>
-</nav>
+  </nav>
 <ul class="nav nav-pills">
+  <li role="presentation"> <img alt="Brand" width="50px" height="40px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/tumblr_mkd9zpSDvJ1qh838mo1_500_zps20a7cdec.gif">
+      </li>
   <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Profile</a></li>
-  <li role="presentation"><a href="#">Messages</a></li>
+  <li role="presentation"><a href="english.html">English</a></li>
+  <li role="presentation"><a href="spanish.html">Spanish</a></li>
+  <li role="presentation"><a href="mma2.html">MMA 2</a></li>
+  
 </ul>
   <div class="jumbotron">
       <div class="portrait_name">
-        <img class="portrait" width="140" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/SI_20151201_173715_zpsmv5ku2p8.jpg">
+        <img class="portrait" width="140" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/FB_IMG_1450903913963_zps4xcqkve2.jpg">
         <h2>Devante Jordan</h2>
         <h5>JordanVI</h5>
-        <p>Chicago Tech Acdemy</p>
+        <p>Chicago Tech Academy</p>
          <p>Art</p>
       </div>
   </div>
@@ -94,13 +95,11 @@ Cardboard, paint, and blinds<br>
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_blank" href=""><img  alt="300x200" src="http://nickgutierrez.xyz/img/filler_image.svg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href=""><img  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/IMG_20151216_102428_zpsguju4uhd.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>Current Project</h3>
 
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-                    elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit.</p>
+                <p>Annnnnd it's not going so well.</p>
 
                           </div>
         </div>
