finish two more pages

--- a/algebra.html
+++ b/algebra.html
@@ -16,45 +16,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
 </head>
-<style>
-  h1, p{
-    color:lightgreen;
-    text-align:center;
-  }
-  body{
-    background:url('http://www.imagesource.com/Doc/IS0/Media/TR5/5/c/4/a/IS098R7EB.jpg') ;
-    background-size:cover;
-    text-align:center;
-    
-  }
-footer{
-  color:black;
-}
-ul{
-background:lightgreen;
-}
- </style>
 <body> 
-
 <ul class="nav nav-tabs">
   <li role="presentation"> <img alt="Brand" width="50px" height="42px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/tumblr_mkd9zpSDvJ1qh838mo1_500_zps20a7cdec.gif">
       </li>
-  <li role="presentation"><a href="index.html" target="_self">Home</a></li>
-  <li role="presentation"><a href="english.html" target="_self">English</a></li>
-  <li role="presentation" class="active"><a href="mma2.html" target="_self">MMA 2</a></li>
-  <li role="presentation"><a href="biology.html" target="_self">Biology</a></li>
-  <li role="presentation"><a href="algebra.html" target="_self">Algebra</a></li>
-  
+  <li role="presentation"><a href="#"target="_self">Home</a></li>
+  <li role="presentation"><a href="english.html"target="_self">English</a></li>
+  <li role="presentation"><a href="mma2.html"target="_self">MMA 2</a></li>
+  <li role="presentation"><a href="biology.html"target="_self">Biology</a></li>
+  <li role="presentation" class="active"><a href="algebra.html"target="_self">Algebra</a></li>
 </ul>
-<h1>Two Trunks in One</h1>
-<p><i>Dragonball Z Super Saiyan Pixel</i><br> 
-<i>1/19/16</i><br>
 
-	I had created a 101 frame Dragonball Z character that’s mixed with two attires of the same person. I used hair from the future Trunks when it was long and his kid form attire(color), which is orange and green. I also used an image from google of goku for the body and I freestyled on the rest. The character I chose was Trunks. The reason for choosing this character was because he’s my most favorable character of the DBZ series. I also chose to do Dragonball Z because I grew up on that show and it was the first anime I watched. Dragonball Z was the reason I got hooked onto anime, thus I decided this is my most important thing to draw, animation-wise. </p><img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation_zps1jqa1yik.gif">
+
+
+
+
 <footer>
  <i>Devante Jordan 2015 ©</i>
-    
-</footer>
 <!--This stuff is the javascript information. The top is for jQuery, the second is Bootstrap, and the 3rd is one one you will edit-->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
