--- a/mma2.html
+++ b/mma2.html
@@ -18,20 +18,18 @@
 </head>
 <style>
   h1, p{
-    color:lightgreen;
+    color:white;
     text-align:center;
   }
   body{
-    background:url('http://www.imagesource.com/Doc/IS0/Media/TR5/5/c/4/a/IS098R7EB.jpg') ;
-    background-size:cover;
+    background:url('http://i.istockimg.com/file_thumbview_approve/54486150/5/stock-photo-54486150-mysterious-light-in-the-center.jpg') ;
+    background-size:contain;
     text-align:center;
     
   }
-footer{
-  color:black;
-}
-ul{
-background:lightgreen;
+ul, footer{
+background-color:#8A0886;
+color:blue;
 }
  </style>
 <body> 
