--- a/algebra.html
+++ b/algebra.html
@@ -20,7 +20,7 @@
 <ul class="nav nav-tabs">
   <li role="presentation"> <img alt="Brand" width="50px" height="42px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/tumblr_mkd9zpSDvJ1qh838mo1_500_zps20a7cdec.gif">
       </li>
-  <li role="presentation"><a href="#"target="_self">Home</a></li>
+  <li role="presentation"><a href="index.html"target="_self">Home</a></li>
   <li role="presentation"><a href="english.html"target="_self">English</a></li>
   <li role="presentation"><a href="mma2.html"target="_self">MMA 2</a></li>
   <li role="presentation"><a href="biology.html"target="_self">Biology</a></li>
