--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
             </div>
         </div>
     </div>
-  
+  <div class="thumbnail_space">
+  <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
           <a target="_self" href="mma2.html"><img width="242px" height="200px"  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation%20clone_zpseueu1w3v.png"></a>
