final project turn in

--- a/english.html
+++ b/english.html
@@ -11,28 +11,36 @@
     <!--This files goes to the CSS page I provided for the landing page. You can Open it as an example, but DO NOT EDIT IT! Any changes should go on a different CSS document-->
   <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
     <!--This file will be the one that you customize yourself, with your own code.-->
-  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet' type='text/css'>
       <!--This link is for the google fonts API, which lets you customize .-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
 </head>
 <style>
   body{
-  background:url('http://i.istockimg.com/file_thumbview_approve/69868969/5/stock-photo-69868969-office-desk-table-with-pen-and-pencil.jpg');
-  background-size:cover;
+background: #0B0719;
+background-size:cover;
+
   }
   h1, h2{
-    color:white;
+    color:#0101DF;
+    text-align:center;
   }
   p{
-    color:white;
+    color:#0101DF;
     text-align:center;
   }
   ul{
-    background-color:black;
+    background-color:#0101DF;
+    font:Georgia, serif;
   }
   footer{
-    background-color:black;
+    background-color:#0101DF;
+  }
+  iframe{
+    width:700px;
+    height:700px;
+    text-align:center;
   }
 </style>
 <body> 
@@ -42,31 +50,24 @@
       </li>
   <li role="presentation"><a href="index.html" target="_self">Home</a></li>
   <li role="presentation" class="active"><a href="english.html" target="_self">English</a></li>
-
-  <li role="presentation"><a href="mma2.html" target="_self">MMA 2</a></li>
+<li role="presentation"><a href="mma2.html" target="_self">MMA 2</a></li>
   <li role="presentation"><a href="biology.html" target="_self">Biology</a></li>
   <li role="presentation"><a href="algebra.html" target="_self">Algebra</a></li>
+  <li role="presentation"><a href="art.html" target="_self">Art</a></li>
   
 </ul>
-<h1><i>I Remember You Were Conflicted</i></h1></br>
+<h1><i>I Remember You Was Conflicted</i></h1></br>
 
-<h2>Devante Jordan<br></h2>
+<h2><br></h2>
 
 <p><i>“Misusing your influence. Sometimes, I did the same. Abusing my power full of resentment. Resentment that turned into a deep depression.”<br></i>
 <br>
-I can remember those long nights she had. Hearing her cry and sorrow throughout the night. You can feel the negative vibe in the house, the long silences, quick conversations, and just being alone. It felt like a paranormal house, but there just wasn’t a ghost. My sister just went incognito out of nowhere, she just became distant and was silent. It had been happening for a while. Me being goofy and funny, thought she just wasn’t getting her way, so I kept making fun of her. I mean, sometimes she’ll crack jokes and be happy. It wasn’t like an everyday silence thing. We had plenty of good days. Honestly, my sister is my best friend. We had more good days than bad days. But boy, when we did have those bad days. Who would have thought my sister to be in a deep depression? She was a normally happy and an optimistic person. But, then again, some people just don’t show their true self or how they really feel. You’ve seen those cliche social media pictures; behind every smile is bitterness. People don’t know what they're going through or how hard life is and people who are living good lives fail to realize this. I never really paid any mind to it, I was always ignoring it. Until I got that phone call.
+Below you will find my defining moment for my AP English class. This was our first major project
+for the year. I put a lot of time and effort, as well as thought into this narrative.
+This is based on a true story. 
+ </p>
+ <iframe src="https://docs.google.com/document/d/1dapKYAnKDDabWsjLzlAkevszTWWzofIWaLkuZQ_z30I/pub?embedded=true"></iframe>
 
-	The entire situation happened in a week’s time. It was “surreal.” I was gaming, like usual, and on my phone, trying to ignore my sister and dad arguing over stuff. I didn’t want to get involved in their disputes or differences. A lot of times I thought to myself “they’ll get over it.” My dad does, but it takes my sister a while. Thus, she stays to herself, leading me to get off my game or phone and have conversations with them. My sister would never tell me what happened, she just tells me the little details. I was never mad about it. If she doesn’t want to talk about it, I would never push her about it. As for my dad, we don’t talk about the situation, we’ll talk about sports or something else because by then he’ll be over it. But, on this particular day, it was crazy. They were yelling, going back and forth. It sounded like they were fighting. I was in the living room at the time. My sister came down the stairs, she was mad, but when she came up to me, she started to cry. She gives me a hug and says, “I love you.” as if she was being deployed or something. She storms out the door. I stand there and think, “What  is going on?” by that time I ran out to chase after her, she was already gone. I blame myself for procrastinating, maybe we could’ve came to a negotiation and talked over what had happened. I walk back in the house and look around to see my old man just relaxing as if nothing happened. I’m assuming he was mad, but wasn’t showing it. I tried calling my sister to see where she went. I realized she left her phone here. So, while everybody is acting like nothing happened, I just say to myself “Forget it.” and go back to gaming. I guess you can say I’m a bad brother because I didn’t go out to look for her. Where could she go, though? Luckily, she didn’t run away, she just went to my mom’s house. My mom was telling me she’ll be alright and that I shouldn’t worry. 
-
-	Eventually, I got over it. It felt like a week went by. But it wasn’t even a week it was a few days. It was on a late Saturday night at 11:00PM. Man, I was laid out in my bed, cuddled under the covers, watching cartoons. I was relaxing in peace and quiet. Just as I began to drift into sleep, like everybody else in my house had, I got a phone call. At first I didn’t recognize the number, so I began to ignore it. Then something was just telling me that it had to have been important. And what do you know? It was important. Thus, I answered the phone.
-“Hello?” I asked.
-“Yea is this Devante?” the person asked.
-“Yea, why? Who is this?” I asked cluelessly.
-“Your cousin. Your sister was rushed to the hospital because she wasn’t feeling well and was uncontrollably shaking. She attempted to overdose on pills.”, she said in a very serious manner. I froze. I was so confused. My head was all over the place. I couldn’t think straight nor did I know what to do next. But, I couldn’t hesitate. 
-“Which hospital?”, I asked.
-“West Suburban Hospital.”, she responded. I jumped up and went to go wake up my dad. I was yelling at him frantically saying that my sister was in the hospital. He was still half asleep, but managed to get up and drive to the hospital. 
-
-We were driving on Lake Shore Drive in silence for nearly an hour. All I was doing was staring out the window, reminiscing on me and my sister’s childhood. I managed not to cry, but that’s not the point. We eventually arrived at the hospital. All I saw was my family sitting around in the waiting room in sorrow. It felt like a movie and this was the part where you find out that the person had died. My dad and mom went into my sister’s room. Everybody else had to stay out, even me. Luckily, she was okay. Her stomach was damaged from trying to overdose. She was trying to commit suicide. I didn’t even know what to say after I heard that. I didn’t know what to do. I kept blaming myself for her being suicidal because I felt like I could’ve bonded with her more. I nearly lost my sister. I was blissful to my own ignorance . I would have never imagined or even thought of  my sister being so depressed to the point where she just gave up on life. I should’ve intervened in their arguments and told them to stop. I should’ve done more. Now, she’s in a hospital bed because she had overdosed. My sister spent the night with my old man, but he took me home first. I was at home contemplating life. “What’s next? What happens when she gets out? Will everything be different? Will there no longer be any more depression, or will it be more? Why can’t I do anything?” I felt helpless and useless. I eventually fell asleep. The next morning, my sister was sent to a rehabilitation center. She was there for a couple weeks. When she came out, she was better than ever. There was no more sorrow. There were no more arguments. We were at a point of peace and calamity. Life got so much better. She told us stories about her experience in there, but she still didn’t tell us what led her to overdosing, besides all of the arguing. I was fine with that, as long as she was happy. She was uplifting again and I knew that she wasn’t hiding the depression like before. She was 100% happy and joyful. Now, I’m here. Hoping nothing like this ever happens again. This experience changed my life drastically. I bond with my sister now more than I used to. Life is good now and I’ve been relaxed more than ever before. I learned not to taunt people as much and as hard because you don’t know what they can be going through. Maturity. </p>
 <footer>
  <i>Devante Jordan 2015 ©</i>
     
