--- a/index.html
+++ b/index.html
@@ -23,36 +23,32 @@
 
   <div class="jumbotron">
       <div class="portrait_name">
-        <img class="portrait" width="140" height="120" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/FB_IMG_1450903913963_zps4xcqkve2.jpg?1455221223889&1455221224745&1455221226027&1455221230560&1455221230769">
+        <img class="portrait" width="90" height="120" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/20160226_135709_zpso250pg9g.jpg">
         <h2>Devante Jordan</h2>
         <h5>JordanVI</h5>
         <p>Chicago Tech Academy</p>
-         <p>Art</p>
+         <p>Beta</p>
       </div>
   </div>
 
 <content>
     <article>
-        <h2>Artist Statement</h2>
-        <p>Devante Jordan, Paris Johnson, Daniel Hernandez, Charles Butts, and Atori Baker<br>
+        <h2>My name is Devante Jordan</h2>
+        <h6>I am from Michigan City, Indiana. Raised in Chicago, Illinois. My website is pretty straight-forward. 
+        Below will have images that'll take you to all of my projects I've done for most of my classes.
+        There will be edits later on in time, this is a beta.</h6><br>
         <br>
-<i>Tranquil Wings</i><br>
-Cardboard, paint, and blinds<br>
-2015<br>
-<br>
-
-In our art installation, Tranquil Wings, we wanted to create a 3 dimensional work that depicts peace and divinity. We cut out cardboard into shapes of wings, then used blinds and cut them out as feathers. We wanted to create an art installation that will make the school look better and give students and visitors a feeling of tranquility. When walking through the hallways and they see our installation, the dark/cool colors will help create a tranquil mood. The actual wings symbolize freedom and clarity of mind.</p>
     </article>
 
 <div class="thumbnail_space">
   <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href=""><a href=""><img  width="329px" height="200px" alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/IMG_20151201_143825_zpsnn9bbpm1.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="art.html"><img  width="329px" height="200px" alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/IMG_20151201_143825_zpsnn9bbpm1.jpg"></a>
             <div class="caption">
-                 <h3>Art Wing Project</h3>
+                 <h3>Art</h3>
 
-                <p>This is a photo of my wing project. Hanging up wing was pretty complicated because we had to hook it onto the ceiling. Then, we had to make sure they were even on both sides so that they won't lean and fall. The overall easiest portion of this project was painting the wall, feathers, and cardboard </p>
+                <p>This image will take you to the Art page.</p>
 
             </div>
         </div>
@@ -61,7 +57,7 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
   <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href="mma2.html"><img width="242px" height="200px"  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation%20clone_zpseueu1w3v.png"></a>
+          <a target="_blank" href="mma2.html"><img width="242px" height="200px"  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation%20clone_zpseueu1w3v.png"></a>
             <div class="caption">
                  <h3>MMA2</h3>
 
@@ -75,7 +71,7 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
     <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href="english.html"><img width="242px" height="200px" alt="300x200" src="http://www.imagesource.com/Doc/IS0/Media/TR5/d/1/9/4/IS09AL7RP.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="english.html"><img width="242px" height="200px" alt="300x200" src="http://www.imagesource.com/Doc/IS0/Media/TR5/d/1/9/4/IS09AL7RP.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>English</h3>
 
@@ -87,11 +83,11 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
     
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href=""><img  alt="300x200" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/IMG_20160113_094808_zpszrb9ds2z.jpg?1455049497653&1455049498413&1455049500814" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="algebra.html"><img  alt="300x200" src="http://i.istockimg.com/file_thumbview_approve/34500966/5/stock-photo-34500966-blackboard.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
-                 <h3>Recent Art Project</h3>
+                 <h3>Algebra</h3>
 
-                <p>Annnnnnnnd it's finished!</p>
+                <p>This image will take you to my algebra spreadsheet for teachers budget and failed products.</p>
                           </div>
                           </div>
         </div>
@@ -100,7 +96,7 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
   <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href="biology.html"><img  alt="300x200" src="http://www.imagesource.com/Doc/IS0/Media/TR5/8/2/c/6/IS09A8I4P.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="biology.html"><img  alt="300x200" src="http://www.imagesource.com/Doc/IS0/Media/TR5/8/2/c/6/IS09A8I4P.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
                  <h3>Biology</h3>
                  
@@ -112,11 +108,11 @@ In our art installation, Tranquil Wings, we wanted to create a 3 dimensional wor
     </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-          <a target="_self" href="algebra.html"><img  alt="300x200" src="http://www.imagesource.com/Doc/IS0/Media/TR5/5/a/f/e/27MRK0132RF.jpg" class="thumbnail_image img-responsive"></a>
+          <a target="_blank" href="#"><img  alt="300x200" src="http://i.istockimg.com/file_thumbview_approve/36421358/5/stock-photo-36421358-coming-soon.jpg" class="thumbnail_image img-responsive"></a>
             <div class="caption">
-                 <h3>Algebra</h3>
+                 <h3>Coming soon</h3>
 
-                <p>This image will take you to my teacher budget spreadsheet.</p>
+                <p></p>
                           </div>
                           </div>
         </div>
