--- a/art.html
+++ b/art.html
@@ -15,12 +15,13 @@
       <!--This link is for the google fonts API, which lets you customize .-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
-</head>
-<style>
-h1, p{
+</head><style>
+h1, h2, p{
   text-align:center;
   color:#0101DF;
-  font-size:50px;
+}
+p{
+  font-size:18px;
 }
 body{
 background: #0B0719;
@@ -34,7 +35,13 @@ ul{
 footer{
   background-color:#0101DF;
 }
-
+h3{
+  text-align:center;
+  color:#0101DF;
+}
+h4{
+  text-align:center;
+}
 </style>
 <body> 
 <ul class="nav nav-tabs">
@@ -44,14 +51,34 @@ footer{
   <li role="presentation"><a href="english.html"target="_self">English</a></li>
   <li role="presentation"><a href="mma2.html"target="_self">MMA 2</a></li>
   <li role="presentation"><a href="biology.html"target="_self">Biology</a></li>
-  <li role="presentation" class="active"><a href="algebra.html"target="_self">Algebra</a></li>
-  <li role="presentation"><a href="art.html" target="_self">Art</a></li>
+  <li role="presentation"><a href="algebra.html"target="_self">Algebra</a></li>
+  <li role="presentation" class="active"><a href="art.html" target="_self">Art</a></li>
 </ul>
 
-<h1>Finance Project</h1>
-<p></p>
-<img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/2016-02-25%2014_20_46-New%20notification_zpspwlmcyma.png">
+  
+        <h2>Artist Statement</h2>
+        <p>Devante Jordan, Paris Johnson, Daniel Hernandez, Charles Butts, and Atori Baker<br>
+        <br>
+<i>Tranquil Wings</i><br>
+Cardboard, paint, and blinds<br>
+2015<br>
+<br>
 
+In our art installation, Tranquil Wings, we wanted to create a 3 dimensional work that depicts peace and divinity. We cut out cardboard into shapes of wings, then used blinds and cut them out as feathers. We wanted to create an art installation that will make the school look better and give students and visitors a feeling of tranquility. When walking through the hallways and they see our installation, the dark/cool colors will help create a tranquil mood. The actual wings symbolize freedom and clarity of mind.</p>
+<p><img width="500px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Mobile%20Uploads/IMG_20151201_143825_zpsnn9bbpm1.jpg">    
+</p>
+<h3>Recent Art Project</h3>
+<p>Devante Jordan, Atori Baker<br>
+<i>Influence DREAMS not CRIME</i><br>
+Acrylic Paint on wood<br>
+Wooden Model<br>
+1/13/16<br>
+
+Sound Power Artist Statement <br>
+
+	“Influence DREAMS not CRIME” is a very powerful phrase we had came up with from words on 4 pieces of paper. Its meaning explains itself, so there’s no need to elaborate on the statement. But, it’s telling you to stop the crime and violence and go for your goals. You should dream big and be optimistic instead of being pessimistic. There is meaning to the color scheme, too. The gradient blue shows you that people who’ve committed crimes came to light. What I say by coming to light is that they got their self together. Hence, the colors go from a dark blue to a light blue. They were at the bottom of the ocean and swam they way up. The blue is very symbolic and has a double entendre as well. When you think about dreams, you think of the stars and such. The dark blue gives you that night feeling, meaning you just fell into your dream.
+	As time progresses, the sun starts to rise and the night starts to set.</p> <br><h4><img width="500px" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/IMG_20160113_094808_zpszrb9ds2z.jpg"></h4>
+<br>
 
 <hr>
 <footer>
