--- a/mma2.html
+++ b/mma2.html
@@ -11,25 +11,27 @@
     <!--This files goes to the CSS page I provided for the landing page. You can Open it as an example, but DO NOT EDIT IT! Any changes should go on a different CSS document-->
   <link type="text/css" rel="stylesheet" href="stylesheets/style.css">
     <!--This file will be the one that you customize yourself, with your own code.-->
-  <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet' type='text/css'>
       <!--This link is for the google fonts API, which lets you customize .-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--This makes the webpage check the size of the device it's on. This lets your page be mobile responsive-->
+
 </head>
 <style>
   h1, p{
-    color:white;
+    color:#0101DF;
     text-align:center;
   }
-  body{
-    background:url('http://i.istockimg.com/file_thumbview_approve/54486150/5/stock-photo-54486150-mysterious-light-in-the-center.jpg') ;
-    background-size:contain;
+body{
+background: #0B0719;
+background-size:cover;
     text-align:center;
     
   }
 ul, footer{
-background-color:#8A0886;
-color:blue;
+background-color:#0101DF;
+color:white;
+font:Georgia, serif;
 }
  </style>
 <body> 
@@ -42,13 +44,15 @@ color:blue;
   <li role="presentation" class="active"><a href="mma2.html" target="_self">MMA 2</a></li>
   <li role="presentation"><a href="biology.html" target="_self">Biology</a></li>
   <li role="presentation"><a href="algebra.html" target="_self">Algebra</a></li>
+  <li role="presentation"><a href="art.html" target="_self">Art</a></li>
   
 </ul>
 <h1>Two Trunks in One</h1>
 <p><i>Dragonball Z Super Saiyan Pixel</i><br> 
 <i>1/19/16</i><br>
 
-	I had created a 101 frame Dragonball Z character that’s mixed with two attires of the same person. I used hair from the future Trunks when it was long and his kid form attire(color), which is orange and green. I also used an image from google of goku for the body and I freestyled on the rest. The character I chose was Trunks. The reason for choosing this character was because he’s my most favorable character of the DBZ series. I also chose to do Dragonball Z because I grew up on that show and it was the first anime I watched. Dragonball Z was the reason I got hooked onto anime, thus I decided this is my most important thing to draw, animation-wise. </p><img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation_zps1jqa1yik.gif">
+	I had created a 101 frame Dragonball Z character that’s mixed with two attires of the same person. I used hair from the future Trunks when it was long and his kid form attire(color), which is orange and green. I also used an image from google of goku for the body and I freestyled on the rest. The character I chose was Trunks. The reason for choosing this character was because he’s my most favorable character of the DBZ series. I also chose to do Dragonball Z because I grew up on that show and it was the first anime I watched. Dragonball Z was the reason I got hooked onto anime, thus I decided this is my most important thing to draw, animation-wise.
+	</p><img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation_zps1jqa1yik.gif">
 <footer>
  <i>Devante Jordan 2015 ©</i>
     
