final project turn in

--- a/english.html
+++ b/english.html
@@ -29,6 +29,7 @@ background-size:cover;
   p{
     color:#0101DF;
     text-align:center;
+    font-size:20px;
   }
   ul{
     background-color:#0101DF;
@@ -41,6 +42,9 @@ background-size:cover;
     width:700px;
     height:700px;
     text-align:center;
+  }
+  i{
+    color:white;
   }
 </style>
 <body> 
@@ -56,16 +60,22 @@ background-size:cover;
   <li role="presentation"><a href="art.html" target="_self">Art</a></li>
   
 </ul>
+
 <h1><i>I Remember You Was Conflicted</i></h1></br>
 
 <h2><br></h2>
-
+<div class="col-md-5">
 <p><i>“Misusing your influence. Sometimes, I did the same. Abusing my power full of resentment. Resentment that turned into a deep depression.”<br></i>
+
+<i>-Kendrick Lamar</i>
+<br>
 <br>
 Below you will find my defining moment for my AP English class. This was our first major project
 for the year. I put a lot of time and effort, as well as thought into this narrative.
 This is based on a true story. 
  </p>
+ </div>
+ 
  <iframe src="https://docs.google.com/document/d/1dapKYAnKDDabWsjLzlAkevszTWWzofIWaLkuZQ_z30I/pub?embedded=true"></iframe>
 
 <footer>
