--- a/mma2.html
+++ b/mma2.html
@@ -18,9 +18,16 @@
 
 </head>
 <style>
-  h1, p{
+h1, i{
+  color:white;
+}
+  p{
     color:#0101DF;
     text-align:center;
+    
+  }
+  p{
+    font-size:20px;
   }
 body{
 background: #0B0719;
@@ -48,11 +55,13 @@ font:Georgia, serif;
   
 </ul>
 <h1>Two Trunks in One</h1>
-<p><i>Dragonball Z Super Saiyan Pixel</i><br> 
+<div class="col-md-5"><p><i>Dragonball Z Super Saiyan Pixel</i><br> 
 <i>1/19/16</i><br>
 
 	I had created a 101 frame Dragonball Z character that’s mixed with two attires of the same person. I used hair from the future Trunks when it was long and his kid form attire(color), which is orange and green. I also used an image from google of goku for the body and I freestyled on the rest. The character I chose was Trunks. The reason for choosing this character was because he’s my most favorable character of the DBZ series. I also chose to do Dragonball Z because I grew up on that show and it was the first anime I watched. Dragonball Z was the reason I got hooked onto anime, thus I decided this is my most important thing to draw, animation-wise.
-	</p><img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation_zps1jqa1yik.gif">
+	
+	</p></div><img src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/Devante%20Jordan%20Animation_zps1jqa1yik.gif">
+
 <footer>
  <i>Devante Jordan 2015 ©</i>
     
