--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
 
   <div class="jumbotron">
       <div class="portrait_name">
-        <img class="portrait" width="90" height="120" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/20160226_135709_zpso250pg9g.jpg">
+        <img class="portrait" width="100" height="150" src="http://i1371.photobucket.com/albums/ag292/ItsJoker20/34308c2a-4a1a-425c-a5e7-754d9b459b05_zps8jph7lou.jpg">
         <h2>Devante Jordan</h2>
-        <h5>JordanVI</h5>
+        <h4>JordanVI</h4>
+        <i><h9>Indigoism</h9></i>
         <p>Chicago Tech Academy</p>
-         <p>Beta</p>
+        <i> <p>Beta</p></i>
       </div>
   </div>
 
 <content>
     <article>
-        <h2>My name is Devante Jordan</h2>
+        <h2><i>"In order to eat the apple, you can't jump." -DidleyNotDidiley</i></h2>
         <h6>I am from Michigan City, Indiana. Raised in Chicago, Illinois. My website is pretty straight-forward. 
         Below will have images that'll take you to all of my projects I've done for most of my classes.
         There will be edits later on in time, this is a beta.</h6><br>
