--- a/english.html
+++ b/english.html
@@ -32,11 +32,11 @@ background-size:cover;
     font-size:20px;
   }
   ul{
-    background-color:#0101DF;
+    background-color:#5F04B4;
     font:Georgia, serif;
   }
   footer{
-    background-color:#0101DF;
+    background-color:#5F04B4;
   }
   iframe{
     width:700px;
