--- a/mma2.html
+++ b/mma2.html
@@ -36,7 +36,7 @@ background-size:cover;
     
   }
 ul, footer{
-background-color:#0101DF;
+background-color:#5F04B4;
 color:white;
 font:Georgia, serif;
 }
