--- a/algebra.html
+++ b/algebra.html
@@ -28,11 +28,11 @@ background-size:contain;
   
 }
 ul{
-  background-color:#0101DF;
+  background-color:#5F04B4;
   font:Georgia, serif;
 }
 footer{
-  background-color:#0101DF;
+  background-color:#5F04B4;
 }
 
 </style>
