--- a/art.html
+++ b/art.html
@@ -32,11 +32,11 @@ background-size:contain;
   
 }
 ul{
-  background-color:#0101DF;
+  background-color:#5F04B4;
   font:Georgia, serif;
 }
 footer{
-  background-color:#0101DF;
+  background-color:#5F04B4;
 }
 h3{
   text-align:center;
